# T-Spe

./: .gitmodules  CMakeLists.txt  README.md  README_CN.md  espidf_merge_firmware.py  sdkconfig.defaults
firmware/: Iperf.txt
firmware/[T-Spe][general_test]/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/examples/general_test/: main.cpp
main/examples/iperf_ethernet/: main.cpp
main/examples/lan8671/: main.cpp
main/examples/original_test/: main.cpp
main/examples/rs485/: main.cpp
main/examples/wifi/: main.cpp
main/examples/wifi_http_download_file/: main.cpp
